<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.add_recipe_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewRecipe"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/ripple_gray"
            android:clickable="true"
            android:contentDescription="@string/select_image"
            android:focusable="true"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/outline_add_photo_alternate_24"
            app:srcCompat="@drawable/outline_add_photo_alternate_24"
            android:onClick="onSelectImageClick" />
            />


        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="5"
            android:gravity="top"/>

        <EditText
            android:id="@+id/editTextCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cooking_time"
            android:inputType="number"/>
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/category_array" />  <!-- This assumes you have predefined categories in strings.xml -->

        <Button
            android:id="@+id/buttonSaveRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>
</ScrollView>
